--- a/docs/fast_data/runtime_management/control_plane.mdx
+++ b/docs/fast_data/runtime_management/control_plane.mdx
@@ -220,7 +220,7 @@ different from the one where Fast Data Runtimes are deployed, a few extra advanc
 When connecting internally to Control Plane service, it is not necessary to publicly expose any endpoint, since all the Control Plane routes can be reached internally
 or via Fabric BFF.
 
-In case the service must be reached from outside the cluster, the endpoints listed in the table below should be [defined in Console](/development_suite/api-console/api-design/endpoints.md) and assigned to Control Plane service.
+In case the service must be reached from outside the cluster, the endpoints listed in the table below should be _defined in Console_ and assigned to Control Plane service.
 These endpoints are necessary to allow gRPC Control Plane Operator requests to reach Control Plane from outside the K8s cluster.
 
 | Endpoint                                    | Rewrite Base Path                           | Microservice    | Container Port |
@@ -230,7 +230,7 @@ These endpoints are necessary to allow gRPC Control Plane Operator requests to r
 | `/control_plane_fabric.RuntimeManagement`   | `/control_plane_fabric.RuntimeManagement`   | `control-plane` |     `50051`    |                        
 | `/control_plane_fabric.ControlPlane`        | `/control_plane_fabric.ControlPlane`        | `control-plane` |     `50051`    |
 
-Also, in the `Advanced Section` of each endpoint, be sure that the [Use DownStream Protocol option](/development_suite/api-console/api-design/endpoints.md#manage-advanced-endpoint-parameters) is set to `true`.
+Also, in the `Advanced Section` of each endpoint, be sure that the _Use DownStream Protocol option_ is set to `true`.
 
 ### Routes
 
