--- a/docs/data_catalog/secure_access.mdx
+++ b/docs/data_catalog/secure_access.mdx
@@ -616,6 +616,9 @@ is listed here:
 | `update:metadata-assets` | enable editing metadata associated to data catalog records                           |
 | `update:bulk-action`     | allow users performing the same operation in bulk over multiple data catalog records |
 | `update:lineage`         | allow users to update lineage information of assets                                  |
+| `admin:producers`        | enable to trigger the execution of different jobs that can update the state of the Data Catalog solution |
+| `read:users`             | enables a user to access the user management application in read-only mode |
+| `update:users`           | enables a user to edit users details in the user management application                              |
 
 :::caution
 Please ensure that all these endpoints and subsequent routes are set with _Authentication Required_ in their security details tab.
