--- a/docs/release-notes/v13.5.2.md
+++ b/docs/release-notes/v13.5.2.md
@@ -5,15 +5,7 @@ sidebar_label: v13.5.2
 image: "img/release-note-link-preview.png"
 ---
 
-_January 30th, 2025_
-
-:::info
-Mia-Platform Console v13.5.2 is **now in Preview** and will be generally available on February 6th.
-
-Console SaaS users can try out v13.5.2 latest improvements in Preview! Open a Service Request to ask for the creation of a sandbox Company in case you do not have access to any Company.
-
-For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
-:::
+_February 6th, 2025_
 
 ## Console 
 
@@ -44,5 +36,5 @@ Add `method` property to `bk-import-modal` to choose which method to use for the
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.9.3-beta.3`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.9.3`.
 
