--- a/docs/release-notes/v13.6.0.md
+++ b/docs/release-notes/v13.6.0.md
@@ -27,7 +27,7 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 This version addressed the following bugs:
 
-*
+* we fixed an issue that caused Advanced configurations to be lost when restoring changes within the revision
 
 ## Fast Data
 
