--- a/docs/release-notes/v13.6.0.md
+++ b/docs/release-notes/v13.6.0.md
@@ -21,7 +21,10 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ### Improvements
 
-#### 
+#### `mlp`
+A new version of the Mia-Platform CLI, `mlp`, `v2.0.0` is available! It comes with the following new features:
+
+* 
 
 ### Bug Fix
 
