--- a/docs/data_catalog/frontend/data_catalog_assets.mdx
+++ b/docs/data_catalog/frontend/data_catalog_assets.mdx
@@ -121,7 +121,7 @@ There are different types of custom properties supported:
 
 ### Create custom property
 
-In the following image, the creation of a new custom property is diplayed. In addition to the Name, Type and Applicable asset types fields, it is possible to optionally add a description to the custom property.  
+In the following image, the creation of a new custom property is displayed. In addition to the Name, Type and Applicable asset types fields, it is possible to optionally add a description to the custom property.  
 
 <div style={{display: 'flex', justifyContent: 'center'}}>
   <div style={{display: 'flex', width: '700px'}}>
