feat: add newline

--- a/docs/data_catalog/frontend/data_catalog_assets.mdx
+++ b/docs/data_catalog/frontend/data_catalog_assets.mdx
@@ -297,7 +297,8 @@ In case the inherited custom property is displayed among the Unknown Custom Prop
 Data Catalog UI allows to perform bulk actions on metadata enrichment.  
 From the search list results, user can decide to select one or more assets; then click the `Bulk edit` button.
 
-A modal opens showing the number and type of assets selected (SoR, table, column). Then the user can choose which fields are to be bulk edited: you can select the asset details description, tags, or choose a list of custom properties that are consistent with the type of assets that have been selected for bulk edit.  
+A modal opens showing the number and type of assets selected (SoR, table, column).
+Then the user can choose which fields are to be bulk edited: you can select the asset details description, tags, or choose a list of custom properties that are consistent with the type of assets that have been selected for bulk edit.  
 
 <div style={{display: 'flex', justifyContent: 'center'}}>
   <div style={{display: 'flex', width: '700px'}}>
