--- a/docs/release-notes/v13.6.0.md
+++ b/docs/release-notes/v13.6.0.md
@@ -36,6 +36,96 @@ This version addressed the following bugs:
 
 ### Fast Data Runtime Management
 
+Fast Data Control Plane Operator has been updated to [v0.3.0](/runtime_suite/fast-data-control-plane-operator/changelog.md).
+
+#### Breaking change
+
+Control Plane Operator now starts accepting connections incoming from Fast Data workloads <u>only after</u> it has connected itself to the main Control Plane instance.  
+In order to update to v0.3.0 of Control Plane Operator, check the specific [Migration Guide](docs/fast_data/runtime_management/control_plane_operator.mdx#migration-guides).
+
+:::caution
+Consequently, both *Fast Data Control Plane Application* services and *Fast Data workloads* **must be updated** to the version supporting this behavior.
+:::
+
+For more information, visit the [compatibility matrix documentation page](/fast_data/runtime_management/compatibility_matrix.md#service-latest-versions).
+
+### Fast Data Services
+
+#### Real Time Updater
+
+The new version `v7.11.0` of the _Real Time Updater_ is available!
+
+##### Added
+
+- `forceResume` setting field to `controlPlane.settings` that can either be a boolean or an object with a numeric field `timeout.ms`, defining the amount of time for control plane pipelines to be resumed after an unsuccessful connection.
+- `PRODUCER_MAX_BATCH_SIZE` environment to set the number of messages of each kafka producer's batch. Defaults to 500.
+
+##### Fixed
+
+- Reconnect Control Plane GRPC client when Control Plane Operator restarts
+
+For more information check out the service [changelog](/runtime_suite/real-time-updater/changelog.md).
+
+#### Projection Storer
+
+The new version `v1.4.0` of the _Projection Storer_ is available!
+
+##### Added
+
+- `forceResume` setting field to `controlPlane.settings` that can either be a boolean or an object with a numeric field `timeout.ms`, defining the amount of time for control plane pipelines to be resumed after an unsuccessful connection.
+
+For more information check out the service [changelog](/runtime_suite/projection-storer/changelog.md).
+
+#### Single View Trigger Generator
+
+The new version `v3.4.0` of the _Single View Trigger Generator_ is available!
+
+##### Added
+
+- `maxBatchSize` property in producer configuration to configure the number of messages that can be written in a single request
+- `forceResume` setting field to `controlPlane.settings` that can either be a boolean or an object with a numeric field `timeout.ms`, defining the amount of time for control plane pipelines to be resumed after an unsuccessful connection.
+
+For more information check out the service [changelog](/runtime_suite/single-view-trigger-generator/changelog.md).
+
+#### Single View Creator
+
+The new version `v6.8.0` of the _Single View Creator_ is available!
+
+##### Added
+
+- `forceResume` setting field to `controlPlane.settings` that can either be a boolean or an object with a numeric field `timeout.ms`, defining the amount of time for control plane pipelines to be resumed after an unsuccessful connection.
+
+##### Removed
+
+- deprecated environment variables `CONTROL_PLANE_ACTIONS_TOPIC` and `CONTROL_PLANE_KAFKA_GROUP_ID`
+
+For more information check out the service [changelog](/runtime_suite/single-view-creator/changelog.md).
+
+## Data Catalog
+
+Data Catalog Application have been updated with new features and small improvements.
+
+### New Features
+
+#### Metadata Inheritance
+
+:::caution
+This feature is currently in **BETA**, so pay attention when using it.  
+
+This feature is supported by versions of [Fabric BFF](/data_catalog/data_catalog_fabric_bff.mdx), [Open Lineage](/data_catalog/data_catalog_open_lineage.mdx), [Data Catalog Frontend](/data_catalog/frontend/overview.mdx) >= v0.3.x.  
+Give a look at the [Data Catalog service latest versions](/data_catalog/compatibility_matrix.md#service-latest-versions).
+:::
+
+The Metadata Inheritance feature allows to propagate metadata from parent assets (SoR, Tables) to child assets (Tables, Columns), ensuring consistency and simplifying governance.  
+To know more about how to manage inheritance of custom properties, give a look at the specific [documentation page](/data_catalog/frontend/data_catalog_assets.mdx#metadata-inheritance).
+
+### Improvements
+
+- For data assets retrieved from ODBC connections, based on the provider type, from now on the UI shows useful information about namespace properties (system of record, catalog name, schema, owner, table), if present
+- At the SoR-level lineage canvas, when inspecting the Jobs list between two System of Records, both `Source table` and `Target table` filters allow to select exclusively the tables involved in those displayed Jobs list
+- Inside the virtual Jobs detail, the source and the target table are displayed; moreover, for a quick navigation, it is possible to click onto the source/target table name to navigate on its detail
+- Virtual assets (both SoRs and Tables) can also be deleted directly from the Lineage canvas section
+
 ## Microfrontend Composer
 
 ### Back-Kit Library
