change a field value

--- a/docs/release-notes/v13.6.0.md
+++ b/docs/release-notes/v13.6.0.md
@@ -57,7 +57,7 @@ The new version `v7.11.0` of the _Real Time Updater_ is available!
 
 ##### Added
 
-- `forceResume` setting field to `controlPlane.settings` that can either be a boolean or an object with a numeric field `timeout.ms`, defining the amount of time for control plane pipelines to be resumed after an unsuccessful connection.
+- `forceResume` setting field to `controlPlane.settings.channel` that can either be a boolean or an object with a numeric field `timeout.ms`, defining the amount of time for control plane pipelines to be resumed after an unsuccessful connection.
 - `PRODUCER_MAX_BATCH_SIZE` environment to set the number of messages of each kafka producer's batch. Defaults to 500.
 
 ##### Fixed
@@ -72,7 +72,7 @@ The new version `v1.4.0` of the _Projection Storer_ is available!
 
 ##### Added
 
-- `forceResume` setting field to `controlPlane.settings` that can either be a boolean or an object with a numeric field `timeout.ms`, defining the amount of time for control plane pipelines to be resumed after an unsuccessful connection.
+- `forceResume` setting field to `controlPlane.settings.channel` that can either be a boolean or an object with a numeric field `timeout.ms`, defining the amount of time for control plane pipelines to be resumed after an unsuccessful connection.
 
 For more information check out the service [changelog](/runtime_suite/projection-storer/changelog.md).
 
@@ -83,7 +83,7 @@ The new version `v3.4.0` of the _Single View Trigger Generator_ is available!
 ##### Added
 
 - `maxBatchSize` property in producer configuration to configure the number of messages that can be written in a single request
-- `forceResume` setting field to `controlPlane.settings` that can either be a boolean or an object with a numeric field `timeout.ms`, defining the amount of time for control plane pipelines to be resumed after an unsuccessful connection.
+- `forceResume` setting field to `controlPlane.settings.channel` that can either be a boolean or an object with a numeric field `timeout.ms`, defining the amount of time for control plane pipelines to be resumed after an unsuccessful connection.
 
 For more information check out the service [changelog](/runtime_suite/single-view-trigger-generator/changelog.md).
 
@@ -93,7 +93,7 @@ The new version `v6.8.0` of the _Single View Creator_ is available!
 
 ##### Added
 
-- `forceResume` setting field to `controlPlane.settings` that can either be a boolean or an object with a numeric field `timeout.ms`, defining the amount of time for control plane pipelines to be resumed after an unsuccessful connection.
+- `forceResume` setting field to `controlPlane.settings.channel` that can either be a boolean or an object with a numeric field `timeout.ms`, defining the amount of time for control plane pipelines to be resumed after an unsuccessful connection.
 
 ##### Removed
 
