feat: updates on AI RAG Chat and AI RAG Template

--- a/docs/release-notes/v13.6.0.md
+++ b/docs/release-notes/v13.6.0.md
@@ -142,7 +142,21 @@ To know more about how to manage inheritance of custom properties, give a look a
 
 ### Marketplace Updates
 
-#### 
+#### AI RAG Chat
+
+The applications _AI RAG Chat_ have been updated with a couple of minor fixes on the backend service:
+
+- the backend service is now called `rag-chatbot-api` and it is available as a Mia-Platform _plugin_, making it more easier to install and manage
+- at application startup, the embeddings collection is automatically created if it does not exist
+- the API to generate embeddings from file now supports markdown files with exntension `.mdx`
+
+> NOTE
+>
+> The `rag-chatbot-api` plugin is available as a standalone plugin in the _Marketplace_.
+
+#### AI RAG Chat Template
+
+We have released a new application, called _AI RAG Chat Template_: it is identical to _AI RAG Chat_, but the backend service is available as a Mia-Platform _template_: when installed, the source code (available on [GitHub](https://github.com/mia-platform/ai-rag-template)) will be forked in a new repository to allow you complete customization.
 
 ## How to update your Console
 
