--- a/docs/data_catalog/frontend/data_catalog_assets.mdx
+++ b/docs/data_catalog/frontend/data_catalog_assets.mdx
@@ -58,9 +58,9 @@ Once the searched asset is found among the search returned elements, click on it
 
 ![Details of a table page](./../img/table_details_page.png)
 
-At the top of the page a bredcrumb helps users to easily understand the background structure of Data Catalog navigation patterns. In the example, user has entered the table `orders-details` detail page; from the breadcrumb it is noticeable that table `orders-details` belongs to System of Records `crud-books`.
+At the top of the page a bredcrumb helps users to easily understand the background structure of Data Catalog navigation patterns. In the example, user has entered the table `AUTHORS` detail page; from the breadcrumb it is noticeable that table `AUTHORS` belongs to System of Records `ORACLE_AWS_CATALOG`.
 
-In case the user wants to easily move from table `orders-details` to SoR `crud-books` without coming back to the search page to find `crud-books` asset, with a simple click on `crud-books` user can enter its detail page.
+In case the user wants to easily move from table `AUTHORS` to SoR `ORACLE_AWS_CATALOG` without coming back to the search page to find `AUTHORS` asset, with a simple click on `ORACLE_AWS_CATALOG` user can enter its detail page.
 
 In case the user wants to go back to the page with the items returned by the search query, a click on the `Assets` button located at the beginning of the breadcrumb will take back to the Assets tab where there is the result of the last search performed.  
 
@@ -84,19 +84,19 @@ In case of a **Virtual SoR** detail page, the provider info is not available, be
 ### Table detail page
 
 The Table detail page shows the following two tabs:
-* **General**, that shows a first **Details** section with asset details about name, its SoR name, number of table columns, tags and description of the asset. Moreover, below the Details, there is the **Custom Properties** section, where user can choose among the available custom properties for performing metadata enrichment. This topic is described in details in the [metadata enrichment](#metadata-enrichment) documentation section.
+* **General**, that shows a first **Details** section with asset details about namespace, number of table columns, tags and description of the asset. The namespace identifies the context in which the table is stored. It depends on the [provider](/data_catalog/frontend/data_catalog_connections.mdx#connection-providers). Moreover, below the Details, there is the **Custom Properties** section, where user can choose among the available custom properties for performing metadata enrichment. This topic is described in details in the [metadata enrichment](#metadata-enrichment) documentation section.
 * **Columns**, that shows the list of tables that belong to that SoR. By clicking on one element of the list, user enters that table detail page.
 * **Lineage**, that shows the lineage canvas displaying how a specific table is related to other tables. For more information about the Table-level lineage, visit the [related documentation](/data_catalog/frontend/data_lineage.mdx#table-level-lineage).
 
 ![Details of a table page](./../img/table_details_page.png)
 
 :::info
-In case of a **Virtual Table** detail page, the Columns tab it is not present. To know more about the concept of `Virtual Asset`, please give a look at the [related documentation](/data_catalog/frontend/data_lineage.mdx#real-and-virtual-assets)
+In case of a **Virtual Table** detail page, the Columns tab it is not present. To know more about the concept of `Virtual Asset`, please give a look at the [related documentation](/data_catalog/frontend/data_lineage.mdx#real-and-virtual-assets).
 :::
 
 ### Column detail page
 
-The Column detail page shows a first **Details** section with asset details such as name, its table name, tags, description of the asset, and many other retrieved info. Moreover, below the Details, there is the **Custom Properties** section, where user can choose among the available custom properties for performing metadata enrichment. This topic is described in details in the [metadata enrichment](#metadata-enrichment) documentation section.
+The Column detail page shows a first **Details** section with asset details such as namespace, tags, description of the asset, and many other retrieved info. Moreover, below the Details, there is the **Custom Properties** section, where user can choose among the available custom properties for performing metadata enrichment. This topic is described in details in the [metadata enrichment](#metadata-enrichment) documentation section.
 
 ![Details of a column page](./../img/column_details_page.png)
 
@@ -238,12 +238,67 @@ In case the unknown metadata is no more consistent or useful on the specific ass
 Please note that this action leads to the removal of the metadata value saved on DB for that specific asset. The custom property remains instead applied on all the other assets that match the expected asset type.
 :::
 
+### Metadata Inheritance
+
+:::caution
+This feature is currently in **BETA**, so pay attention when using it.  
+
+This feature is supported by versions of [Fabric BFF](/data_catalog/data_catalog_fabric_bff.mdx), [Open Lineage](/data_catalog/data_catalog_open_lineage.mdx), [Data Catalog Frontend](/data_catalog/frontend/overview.mdx) >= v0.3.x. Give a look at the [Data Catalog service latest versions](/data_catalog/compatibility_matrix.md#service-latest-versions).
+:::
+
+The **Metadata Inheritance** feature allows the propagation of metadata from parent assets to their child assets.  
+This ensures consistency and simplifies data governance.  
+The inheritance mechanism follows the hierarchical structure in Data Catalog: **SoR (System of Record)** → **Tables** → **Columns**.
+
+:::info
+Metadata Inheritance feature is applicable **exclusively on [real assets](/data_catalog/frontend/data_lineage.mdx#assets-real-and-virtual)**.
+:::
+
+#### Applying Custom Properties with Inheritance
+
+When adding a custom property to a **SoR** or a **Table**, a flag can be enabled to propagate the metadata to all its child assets:
+
+<div style={{display: 'flex', justifyContent: 'center'}}>
+  <div style={{display: 'flex', width: '400px'}}>
+
+![Add custom property with inheritance](./../img/add_custom_property_with_inheritance.png)
+
+  </div>
+</div>
+
+- If a custom property is added to a **SoR**, enabling inheritance will apply the property to all **Tables** and **Columns** under that SoR.
+- If a custom property is added to a **Table**, enabling inheritance will apply the property to all its **Columns**.
+
+Inherited properties will be visible at both **Table** and **Column** levels (or only at **Column** level, this depends on where in the hierarchy level the inheritance has been applied), marked with an ***Inherited*** tag indicating their origin (either from a SoR or a Table).
+
+![Inherited custom property](./../img/inherited_custom_property.png)
+
+#### Updating and Deleting Inherited Properties
+
+- **Updates**: Any update to an inherited custom property at the parent level (SoR or Table) will **overwrite** the value across all child assets (if already present).
+- **Deletions**: Removing a custom property at the parent level will also remove it from all child assets.
+
+:::info
+Child assets (Tables and/or Columns) that inherit properties **cannot** modify or delete them specifically. The inheritance is strictly enforced from the parent level.
+:::
+
+#### Example Use Case
+
+1. A custom property **"Location"** is added to **SoR X** with inheritance enabled.
+2. All **Tables** and **Columns** belonging to **SoR X** automatically receive the **"Location"** property with the assigned value.
+3. If the **"Location"** property is updated at **SoR X**, the new value is applied to all child **Tables** and **Columns**.
+4. If the **"Location"** property is deleted at **SoR X**, it is also removed from all child **Tables** and **Columns**.
+5. A user accessing a **Column** under **SoR X** can see the inherited property but cannot modify or remove it.
+
+In case the inherited custom property is displayed among the Unknown Custom Properties card, you can go to the [Custom Properties Management tab](#custom-properties-management) and modify consistently the *Applicable asset type* field for that specific custom property.
+
 ## Bulk Actions
 
 Data Catalog UI allows to perform bulk actions on metadata enrichment.  
 From the search list results, user can decide to select one or more assets; then click the `Bulk edit` button.
 
-A modal opens showing the number and type of assets selected (SoR, table, column). Then the user can choose which fields are to be bulk edited: you can select the asset details description, tags, or choose a list of custom properties that are consistent with the type of assets that have been selected for bulk edit.  
+A modal opens showing the number and type of assets selected (SoR, table, column).
+Then the user can choose which fields are to be bulk edited: you can select the asset details description, tags, or choose a list of custom properties that are consistent with the type of assets that have been selected for bulk edit.  
 
 <div style={{display: 'flex', justifyContent: 'center'}}>
   <div style={{display: 'flex', width: '700px'}}>
